[package]
name = "voting-system-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = { git = "https://github.com/paritytech/subxt.git", version = "0.27.1" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }
sp-keyring = "20.0.0"
tokio = { version = "1.25", features = ["rt-multi-thread", "macros", "time"] }
log = "0.4.14"